Added new faqs and some other changes

--- a/11_blog-nexss-programmer/tutorials/nexss-blog.html
+++ b/11_blog-nexss-programmer/tutorials/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Nexss Programmer - Tutorials
-  </title>"
+title: "BLOG Nexss Programmer - Tutorials"
 permalink: /11_blog-nexss-programmer/tutorials/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -197,7 +195,7 @@ permalink: /11_blog-nexss-programmer/tutorials/nexss-blog.html
 To run your program, you need to upload files to your drive. You can do it in several ways.</p>
 <h4>1. Using Nexss Programmer Download Package</h4>
 <p>Create new Colab Notebook and run:</p>
-<pre><code class="language-py">!npm i -g @nexssp/cli
+<pre><code class="language-py">!npm i -g @nexssp/cli # install latest version of the Nexss Programmer
 
 # to download program
 !nexss Download https://raw.githubusercontent.com/nexssp/language_clojure/master/templates/helloWorld.clj --nxsField
