--- a/en/21_Node.js/module_alias/nexss-blog.html
+++ b/en/21_Node.js/module_alias/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Node.js - Module_alias
-  </title>"
+title: "BLOG Node.js - Module_alias"
 permalink: /en/21_Node.js/module_alias/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
