--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Easy Install - Free Open Source Nexss Programmer
-  </title>"
+title: "Easy Install - Free Open Source Nexss Programmer"
 permalink: /en/easy-install-nexss-programmer.html
 ---
 <!DOCTYPE html><html lang="en"><head>
