--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Welcome - News
-  </title>"
+title: "BLOG Welcome - News"
 permalink: /en/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
