--- a/en/programmer_.html
+++ b/en/programmer_.html
@@ -1,6 +1,6 @@
 ---
-title: "<title>Home - Nexss Programmer</title>"
-permalink: /en/programmer.html
+title: "Home - Nexss Programmer"
+redirect_from: /en/programmer.html/
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
    <html lang="en" class="innerpage no-js ie6">
