--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Nexss Programmer, Innovative programming solutions for your business - Nexss.com
-  </title>"
+title: "Nexss Programmer, Innovative programming solutions for your business - Nexss.com"
 permalink: /
 ---
 <!DOCTYPE html><html lang="en"><head>
