--- a/nexss-portfolio.html
+++ b/nexss-portfolio.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Portfolio - Nexss.com
-  </title>"
+title: "Portfolio - Nexss.com"
 permalink: /nexss-portfolio.html
 ---
 <!DOCTYPE html><html lang="en"><head>
