--- a/pl/11_blog-nexss-programmer/introduction/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/introduction/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Nexss Programmer - Introduction
-  </title>"
+title: "BLOG Nexss Programmer - Introduction"
 permalink: /pl/11_blog-nexss-programmer/introduction/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
