--- a/pl/faq-najczesciej-zadawane-pytania.html
+++ b/pl/faq-najczesciej-zadawane-pytania.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    
-  </title>"
+title: "FAQ - Frequently Asked Questions"
 permalink: /pl/faq-najczesciej-zadawane-pytania.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -15,15 +13,15 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
 </script>
 
   <title>
-    
+    FAQ - Frequently Asked Questions
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="description" content="Checkout frequently asked questions about Nexss Programmer">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="FAQ - Frequently Asked Questions">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -216,8 +214,6 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
                 </div>
               </div>
             </div>
-                      </div>
-                    <div class="item__list  wow fadeInUp" data-wow-delay="0.2s">
                         <div class="item">
               <div class="item__title">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="451.847px" height="451.846px" viewBox="0 0 451.847 451.846" style="enable-background:new 0 0 451.847 451.846;" xml:space="preserve">
@@ -233,12 +229,14 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
                 <div class="article">
                   <div class="descr">
                     <p>
-                      There not so many tutorials regarding using Nexss Programmer yet, but is quite easy to use for compiling particular languages: just command nexss and name of the program. Also adding new files from tempaltes is just nexss file add myfile.extenstion.
+                      See our <a rel="canonical" href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">blog</a> , <a rel="canonical" href="pl/programmer.html/Nexss-Programmer-Cheat-sheet">cheat sheet</a> or just the <a rel="canonical" href="pl/programmer.html">documentation</a>
                     </p>
                   </div>
                 </div>
               </div>
             </div>
+                      </div>
+                    <div class="item__list  wow fadeInUp" data-wow-delay="0.2s">
                         <div class="item">
               <div class="item__title">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="451.847px" height="451.846px" viewBox="0 0 451.847 451.846" style="enable-background:new 0 0 451.847 451.846;" xml:space="preserve">
@@ -286,6 +284,27 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
 </ul>
 
                     <p></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+                        <div class="item">
+              <div class="item__title">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="451.847px" height="451.846px" viewBox="0 0 451.847 451.846" style="enable-background:new 0 0 451.847 451.846;" xml:space="preserve">
+                  <g>
+                    <path d="M248.292,106.406l194.281,194.29c12.365,12.359,12.365,32.391,0,44.744c-12.354,12.354-32.391,12.354-44.744,0
+      									L225.923,173.529L54.018,345.44c-12.36,12.354-32.395,12.354-44.748,0c-12.359-12.354-12.359-32.391,0-44.75L203.554,106.4
+      									c6.18-6.174,14.271-9.259,22.369-9.259C234.018,97.141,242.115,100.232,248.292,106.406z"></path>
+                  </g>
+                </svg>
+                What other functionalities Nexss Programmer has?
+              </div>
+              <div class="item__descr">
+                <div class="article">
+                  <div class="descr">
+                    <p>
+                      Nexss Programmer has a lot of additional functionalities. For example check your system and package managers for your linux distro by <b>`nexss -env`</b> or download file from the web <b>`nexss Downlad [url]` </b>. There are unlimited possibilities. You can write your own commands, you can extend Nexss Programmer to unknown levels yet.
+                    </p>
                   </div>
                 </div>
               </div>
