--- a/pl/polityka-prywatnosci.html
+++ b/pl/polityka-prywatnosci.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    
-  </title>"
+title: ""
 permalink: /pl/polityka-prywatnosci.html
 ---
 <!DOCTYPE html><html lang="en"><head>
