--- a/pl/programmerNexss-Programmer-Cheat-sheet.html
+++ b/pl/programmerNexss-Programmer-Cheat-sheet.html
@@ -1,6 +1,6 @@
 ---
 title: "Nexss Programmer Cheat sheet - Nexss Programmer"
-permalink: /programmer.html/Nexss-Programmer-Cheat-sheet
+permalink: /pl/programmer.html/Nexss-Programmer-Cheat-sheet
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
    <html lang="en" class="innerpage no-js ie6">
