--- a/programmerCheck-folder-blocked-by-process.html
+++ b/programmerCheck-folder-blocked-by-process.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Check folder blocked by process - Nexss Programmer</title>"
+title: "Check folder blocked by process - Nexss Programmer"
 permalink: /programmer.html/Check-folder-blocked-by-process
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
