--- a/programmerDonate.html
+++ b/programmerDonate.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Donate - Nexss Programmer</title>"
+title: "Donate - Nexss Programmer"
 permalink: /programmer.html/Donate
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
