--- a/programmerLanguages.html
+++ b/programmerLanguages.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Languages - Nexss Programmer</title>"
+title: "Languages - Nexss Programmer"
 permalink: /programmer.html/Languages
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
