--- a/programmerManage-system-user-paths-command-line.html
+++ b/programmerManage-system-user-paths-command-line.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Manage system user paths command line - Nexss Programmer</title>"
+title: "Manage system user paths command line - Nexss Programmer"
 permalink: /programmer.html/Manage-system-user-paths-command-line
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
