--- a/programmerNexss-Programmer-Testing.html
+++ b/programmerNexss-Programmer-Testing.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss Programmer Testing - Nexss Programmer</title>"
+title: "Nexss Programmer Testing - Nexss Programmer"
 permalink: /programmer.html/Nexss-Programmer-Testing
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
