--- a/programmerPackages.html
+++ b/programmerPackages.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Packages - Nexss Programmer</title>"
+title: "Packages - Nexss Programmer"
 permalink: /programmer.html/Packages
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
