--- a/programmerPowershell.html
+++ b/programmerPowershell.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Powershell - Nexss Programmer</title>"
+title: "Powershell - Nexss Programmer"
 permalink: /programmer.html/Powershell
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
