--- a/programmerProjects.html
+++ b/programmerProjects.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Projects - Nexss Programmer</title>"
+title: "Projects - Nexss Programmer"
 permalink: /programmer.html/Projects
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
