--- a/programmerTesting.html
+++ b/programmerTesting.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Testing - Nexss Programmer</title>"
+title: "Testing - Nexss Programmer"
 permalink: /programmer.html/Testing
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
