--- a/programmerTroubleshooting.html
+++ b/programmerTroubleshooting.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Troubleshooting - Nexss Programmer</title>"
+title: "Troubleshooting - Nexss Programmer"
 permalink: /programmer.html/Troubleshooting
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
