--- a/programmerTutorial-Template-Package.html
+++ b/programmerTutorial-Template-Package.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Tutorial Template Package - Nexss Programmer</title>"
+title: "Tutorial Template Package - Nexss Programmer"
 permalink: /programmer.html/Tutorial-Template-Package
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
