--- a/programmerWSL-(Windows-Subsystem-Linux).html
+++ b/programmerWSL-(Windows-Subsystem-Linux).html
@@ -1,5 +1,5 @@
 ---
-title: "<title>WSL (Windows Subsystem Linux) - Nexss Programmer</title>"
+title: "WSL (Windows Subsystem Linux) - Nexss Programmer"
 permalink: /programmer.html/WSL-(Windows-Subsystem-Linux)
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
