--- a/programmer_.html
+++ b/programmer_.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Home - Nexss Programmer</title>"
+title: "Home - Nexss Programmer"
 redirect_from: /programmer.html/
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
