--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    
-  </title>"
+title: ""
 permalink: /terms-and-conditions.html
 ---
 <!DOCTYPE html><html lang="en"><head>
