--- a/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Blender 3D - Custom Scripting Templates
-  </title>"
+title: "BLOG Blender 3D - Custom Scripting Templates"
 permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
