--- a/en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Blender 3D - Nexss Programmer Nodes
-  </title>"
+title: "BLOG Blender 3D - Nexss Programmer Nodes"
 permalink: /en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
