--- a/en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
+++ b/en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    BLOG Natron - Nexss Programmer Nodes
-  </title>"
+title: "BLOG Natron - Nexss Programmer Nodes"
 permalink: /en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
