--- a/nexss-programmer-features.html
+++ b/nexss-programmer-features.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Features  - Free Open Source Nexss Programmer
-  </title>"
+title: "Features  - Free Open Source Nexss Programmer"
 permalink: /nexss-programmer-features.html
 ---
 <!DOCTYPE html><html lang="en"><head>
