--- a/pl/index.html
+++ b/pl/index.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Nexss Programmer, Innowacyjne programistyczne rozwiązania dla Twojego biznesu - Nexss.com
-  </title>"
+title: "Nexss Programmer, Innowacyjne programistyczne rozwiązania dla Twojego biznesu - Nexss.com"
 permalink: /pl/index.html
 ---
 <!DOCTYPE html><html lang="en"><head>
