--- a/pl/latwa-instalacja-nexss-programmer.html
+++ b/pl/latwa-instalacja-nexss-programmer.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    Łatwa instalacja - Darmowy Open Source Nexss Programmer
-  </title>"
+title: "Łatwa instalacja - Darmowy Open Source Nexss Programmer"
 permalink: /pl/latwa-instalacja-nexss-programmer.html
 ---
 <!DOCTYPE html><html lang="en"><head>
