--- a/pl/nexss-programming-languages.html
+++ b/pl/nexss-programming-languages.html
@@ -1,7 +1,5 @@
 ---
-title: "<title>
-    
-  </title>"
+title: ""
 permalink: /pl/nexss-programming-languages.html
 ---
 <!DOCTYPE html><html lang="en"><head>
