--- a/programmerConcept-Overview.html
+++ b/programmerConcept-Overview.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Concept Overview - Nexss Programmer</title>"
+title: "Concept Overview - Nexss Programmer"
 permalink: /programmer.html/Concept-Overview
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
