--- a/programmerConfig.html
+++ b/programmerConfig.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Config - Nexss Programmer</title>"
+title: "Config - Nexss Programmer"
 permalink: /programmer.html/Config
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
