--- a/programmerData-Validation.html
+++ b/programmerData-Validation.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Data Validation - Nexss Programmer</title>"
+title: "Data Validation - Nexss Programmer"
 permalink: /programmer.html/Data-Validation
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
