--- a/programmerEnvironment.html
+++ b/programmerEnvironment.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Environment - Nexss Programmer</title>"
+title: "Environment - Nexss Programmer"
 permalink: /programmer.html/Environment
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
