--- a/programmerFiles.html
+++ b/programmerFiles.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss Programmer Documentation</title>"
+title: "Nexss Programmer Documentation"
 permalink: /programmer.html/Files
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
