--- a/programmerNexss-CLI-Development.html
+++ b/programmerNexss-CLI-Development.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss CLI Development - Nexss Programmer</title>"
+title: "Nexss CLI Development - Nexss Programmer"
 permalink: /programmer.html/Nexss-CLI-Development
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
