--- a/programmerNexss-Files.html
+++ b/programmerNexss-Files.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss Files - Nexss Programmer</title>"
+title: "Nexss Files - Nexss Programmer"
 permalink: /programmer.html/Nexss-Files
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
