--- a/programmerNexss-Programmer-Edit.html
+++ b/programmerNexss-Programmer-Edit.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss Programmer Edit - Nexss Programmer</title>"
+title: "Nexss Programmer Edit - Nexss Programmer"
 permalink: /programmer.html/Nexss-Programmer-Edit
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
