--- a/programmerNexss-Programmer-Programming-Languages.html
+++ b/programmerNexss-Programmer-Programming-Languages.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Nexss Programmer Programming Languages - Nexss Programmer</title>"
+title: "Nexss Programmer Programming Languages - Nexss Programmer"
 permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
