--- a/programmerTutorials.html
+++ b/programmerTutorials.html
@@ -1,5 +1,5 @@
 ---
-title: "<title>Tutorials - Nexss Programmer</title>"
+title: "Tutorials - Nexss Programmer"
 permalink: /programmer.html/Tutorials
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
