NEW VERSION 2.4.0 + some articles

--- a/en/index.html
+++ b/en/index.html
@@ -132,7 +132,7 @@ permalink: /en/index.html
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.3.6
+                    Nexss Programmer 2.4.0
                 </div>
                 <div class="text_3">
                     The innovative and evolutionary tool for the programmers. <br>
@@ -462,14 +462,21 @@ permalink: /en/index.html
     </a>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="en/privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="en/terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
