--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -156,6 +156,7 @@ permalink: /en/nexss-blog.html
         <ul>
                     <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
                     <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
+                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage</a></li>
                   </ul>
                 <b>Node.js</b>
         <ul>
@@ -170,10 +171,25 @@ permalink: /en/nexss-blog.html
         <ul>
                     <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
                   </ul>
+                <b>Our Free Packages</b>
+        <ul>
+                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction</a></li>
+                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages</a></li>
+                  </ul>
               </div>
       <div class="column2">
         <h2>News</h2>
-<h3>April 25th, 2021</h3>
+<h3>May 3rd, 2021</h3>
+<p>Nexss Programmer new version <b>2.4.0</b><br>
+A LOT OF REFACTORING AND IMPROVEMENTS: </p><ul><li>New packages:<b>@nexssp/min
+@nexssp/test
+@nexssp/const
+@nexssp/dddebug
+@nexssp/stack</b></li><li><b>new generic testing module</b></li><li><b>much more to come..</b></li></ul><p></p>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
+<h3>April 25th, 2021</h3></li>
+</ul>
 <p>Nexss Programmer new version <b>2.2.40</b><br>
 NEW FUNCTIONALITIES ADDED: </p><ul><li><b>nexss run</b></li><li><b>nexss cache rebuild</b></li><li><b>big efficiency improvement</b></li></ul><p></p>
 <ul>
@@ -227,14 +243,21 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="en/privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="en/terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
