--- a/pl/faq.html
+++ b/pl/faq.html
@@ -323,14 +323,21 @@ permalink: /pl/faq.html
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
         </li>
         <li>
           <a href="pl/regulamin.html">Regulamin</a>
-        </li>
+        </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
