--- a/programmerNexss-Programmer-Programming-Languages.html
+++ b/programmerNexss-Programmer-Programming-Languages.html
@@ -91,7 +91,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
         <hr>
         <div class="d-flex flex-column flex-md-row">
             <div class="flex-shrink-0 col-12 col-md-9 mb-5 mb-md-0">
-                <h2>Programming languages implemented in Nexss Programmer. Updated: <strong>21 April 2021</strong></h2>
+                <h2>Programming languages implemented in Nexss Programmer. Updated: <strong>30 April 2021</strong></h2>
 <table>
 <thead>
 <tr>
@@ -209,7 +209,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>coffee</td>
 <td><a href="https://coffeescript.org">https://coffeescript.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -236,7 +236,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>dart</td>
 <td><a href="https://dart.dev">https://dart.dev</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -245,7 +245,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>exs</td>
 <td><a href="https://elixir-lang.org">https://elixir-lang.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -254,7 +254,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>erl</td>
 <td><a href="https://www.erlang.org">https://www.erlang.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -263,7 +263,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>f90, f</td>
 <td><a href="https://www.fortran.com">https://www.fortran.com</a></td>
 <td>* limited</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -272,7 +272,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>go</td>
 <td><a href="https://golang.org">https://golang.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -308,7 +308,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>html</td>
 <td></td>
 <td>-</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -316,8 +316,8 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>Hy</td>
 <td>hy</td>
 <td><a href="https://docs.hylang.org">https://docs.hylang.org</a></td>
-<td>* limited</td>
-<td></td>
+<td>Yes</td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -488,7 +488,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>rb</td>
 <td><a href="https://www.ruby-lang.org">https://www.ruby-lang.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
@@ -506,7 +506,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>scala</td>
 <td><a href="https://www.scala-lang.org">https://www.scala-lang.org</a></td>
 <td>Yes</td>
-<td></td>
+<td>Yes</td>
 <td></td>
 <td>Yes</td>
 </tr>
