--- a/en/11_blog-nexss-programmer/tutorials/nexss-blog.html
+++ b/en/11_blog-nexss-programmer/tutorials/nexss-blog.html
@@ -156,6 +156,7 @@ permalink: /en/11_blog-nexss-programmer/tutorials/nexss-blog.html
         <ul>
                     <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
                     <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
+                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage</a></li>
                   </ul>
                 <b>Node.js</b>
         <ul>
@@ -169,6 +170,11 @@ permalink: /en/11_blog-nexss-programmer/tutorials/nexss-blog.html
                 <b>Natron</b>
         <ul>
                     <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
+                  </ul>
+                <b>Our Free Packages</b>
+        <ul>
+                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction</a></li>
+                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages</a></li>
                   </ul>
               </div>
       <div class="column2">
@@ -264,14 +270,21 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="en/privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="en/terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
