--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -143,7 +143,7 @@ permalink: /en/easy-install-nexss-programmer.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.3.6</span>
+      <span>Nexss Programmer 2.4.0</span>
       Open Source
     </div>
     <a href="en/programmer.html" class="btn btn__green">Documentation</a>
@@ -154,7 +154,7 @@ permalink: /en/easy-install-nexss-programmer.html
     <div>
       <div>
         <h2>Open Source</h2>
-        <h3>Install Nexss Programmer 2.3.6 Open Source</h3>
+        <h3>Install Nexss Programmer 2.4.0 Open Source</h3>
 
         <h4>Through NPM - <b>Linux, MacOS, Windows</b></h4>
           <p style="color:#666;font-size:smaller">note: Linux and MacOS
@@ -405,14 +405,21 @@ permalink: /en/easy-install-nexss-programmer.html
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="en/privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="en/terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
