--- a/nexss-portfolio.html
+++ b/nexss-portfolio.html
@@ -604,14 +604,21 @@ permalink: /nexss-portfolio.html
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
