--- a/nexss-programmer-features.html
+++ b/nexss-programmer-features.html
@@ -143,7 +143,7 @@ permalink: /nexss-programmer-features.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.3.6</span>
+      <span>Nexss Programmer 2.4.0</span>
       Features
     </div>
     <a href="programmer.html" class="btn btn__green">Documentation</a>
@@ -366,14 +366,21 @@ nexss myprogram.php # compile php program</code></pre>
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
           <a href="terms-and-conditions.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li>
           <a href="nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
