--- a/pl/index.html
+++ b/pl/index.html
@@ -132,7 +132,7 @@ permalink: /pl/index.html
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.3.6
+                    Nexss Programmer 2.4.0
                 </div>
                 <div class="text_3">
                     Innowacyjne i ewolucyjne narzędzie dla programistów. <br>
@@ -462,14 +462,21 @@ permalink: /pl/index.html
     </a>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
-        <li>
+        <!-- <li>
           <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
         </li>
         <li>
           <a href="pl/regulamin.html">Regulamin</a>
-        </li>
+        </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+        </li>
+        <li>
+          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+            programming languages</a>
         </li>
       </ul>
     </div>
