--- a/pl/nexss-portfolio.html
+++ b/pl/nexss-portfolio.html
@@ -153,7 +153,7 @@ permalink: /pl/nexss-portfolio.html
 <div class="row list">
                             <div class="">
         <div class="work show hover">
-            <a target="_blank" class="popup" href="assets/images/nexss-programmer/NexssProgrammerYT.png">
+            <a target="_blank" class="popup" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">
                 <img src="assets/images/nexss-programmer/thumb/NexssProgrammerYT.png" alt="Presentation poster - Nexss.com">
             </a>
             <p class="elTitle">Nexss Programmer - presentation poster</p>
