--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ permalink: /
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.5.37
+                    Nexss Programmer 2.5.38
                 </div>
                 <div class="text_3">
                     The innovative and evolutionary tool for the programmers. <br>
@@ -475,7 +475,7 @@ permalink: /
           <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
