--- a/pl/969_Our-free-packages/introduction/nexss-blog.html
+++ b/pl/969_Our-free-packages/introduction/nexss-blog.html
@@ -237,7 +237,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
