--- a/pl/index.html
+++ b/pl/index.html
@@ -132,7 +132,7 @@ permalink: /pl/index.html
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.5.37
+                    Nexss Programmer 2.5.38
                 </div>
                 <div class="text_3">
                     Innowacyjne i ewolucyjne narzędzie dla programistów. <br>
@@ -475,7 +475,7 @@ permalink: /pl/index.html
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
