--- a/en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -235,7 +235,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
