--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -143,7 +143,7 @@ permalink: /en/easy-install-nexss-programmer.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.5.37</span>
+      <span>Nexss Programmer 2.5.38</span>
       Open Source
     </div>
     <a href="en/programmer.html" class="btn btn__green">Documentation</a>
@@ -154,7 +154,7 @@ permalink: /en/easy-install-nexss-programmer.html
     <div>
       <div>
         <h2>Open Source</h2>
-        <h3>Install Nexss Programmer 2.5.37 Open Source</h3>
+        <h3>Install Nexss Programmer 2.5.38 Open Source</h3>
 
         <h4>Through NPM - <b>Linux, MacOS, Windows</b></h4>
           <p style="color:#666;font-size:smaller">note: Linux and MacOS
@@ -418,7 +418,7 @@ permalink: /en/easy-install-nexss-programmer.html
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
