--- a/en/nexss-portfolio.html
+++ b/en/nexss-portfolio.html
@@ -617,7 +617,7 @@ permalink: /en/nexss-portfolio.html
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
