--- a/en/nexss-programmer-features.html
+++ b/en/nexss-programmer-features.html
@@ -143,7 +143,7 @@ permalink: /en/nexss-programmer-features.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.5.37</span>
+      <span>Nexss Programmer 2.5.38</span>
       Features
     </div>
     <a href="en/programmer.html" class="btn btn__green">Documentation</a>
@@ -191,8 +191,6 @@ nexss myprogram.php # compile php program</code></pre>
 <h3>Build your own Programming Language</h3>
 <p>Like .nexss you can build your own programming languages. For now it will have .nexss extension however commands will be all yours. The next part will be to allow to your custom language extension.</p>
 <p>Each command in <strong>.nexss</strong> is a Nexss Programmer Package. More here: <a href="https://github.com/nexssp/cli/wiki/Packages">Nexss Programmer Packages</a></p>
-<h3>Operating Systems</h3>
-<p>Code of the core Nexss Programmer works on all operating systems however for now all configurations are done for the <strong>Windows OS</strong>.</p>
 <h3>Contribution, Cooperation</h3>
 <p>It is Open Source so everyone can contribute and add templates, some tips and tricks etc.</p>
 <h4>Thank you for all the contributions!</h4>
@@ -379,7 +377,7 @@ nexss myprogram.php # compile php program</code></pre>
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
