--- a/en/nexss-programming-languages.html
+++ b/en/nexss-programming-languages.html
@@ -610,7 +610,7 @@ If you're the maintainer of a the language or technology not listed / implemente
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
