--- a/pl/faq-najczesciej-zadawane-pytania.html
+++ b/pl/faq-najczesciej-zadawane-pytania.html
@@ -336,7 +336,7 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
