--- a/pl/nexss-programming-languages.html
+++ b/pl/nexss-programming-languages.html
@@ -609,7 +609,7 @@ Wszystkie strony i kontakty wyświetlone są poniżej.</p>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Supported
+          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
             programming languages</a>
         </li>
       </ul>
